# opencv-python

./: .README.md.un~  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  LICENSE-3RD-PARTY.txt  LICENSE.txt  MANIFEST.in  README.md  README.md~  README.rst  README_CONTRIB.rst  appveyor.yml  build.cmd  config.sh  deploy.cmd  env_vars.sh  find_version.py  multibuild_customize.sh  patch_auditwheel_whitelist.py  pyproject.toml  requirements.txt  setup.py  tests.py  travis.yml  travis_config.sh  travis_multibuild_customize.sh  travis_osx_brew_cache.sh
.github/: issue_template.md
.github/workflows/: build_packages.yml  build_rolling_packages.yml  build_wheels.yml  build_wheels_linux.yml  build_wheels_linux_arm.yml  build_wheels_macos.yml  build_wheels_macos_m1.yml  build_wheels_windows.yml  lint_python.yml
appveyor/: build.cmd  setup.cfg
cv2/: LICENSE-3RD-PARTY.txt  __init__.py
docker/: Dockerfile_i686  Dockerfile_x86_64  README.md
docker/manylinux2014/: Dockerfile_aarch64  Dockerfile_aarch64.orig  Dockerfile_i686  Dockerfile_x86_64
patches/: patch1.patch  patch2.patch  patchOpenEXR  patchQtPlugins
scripts/: __init__.py  build.sh  config-override.py  init-override.py  install.sh  source-packages-preparation.sh
tests/: get_build_info.py  pylint.py  pylintrc  test.py
travis/: build-wheels-osx.sh  build-wheels.sh  deploy.sh  disable_i386.patch  install-ninja.sh  setup.cfg  test-wheels.sh  toolchain_macos.cmake
